2021-09-30  Frederik Seiffert <frederik@algoriddim.com>
	* Source/CFString.c,
	* Source/config.h.in,
	* configure,
	* configure: Use unorm2 API instead of deprecated unorm

2021-03-22  Frederik Seiffert <frederik@algoriddim.com>
	* Source/CFRunLoop.c,
	* Source/CFRuntime.c
	* Source/CFSocket.c
	* Source/CFStream.c
	* Source/CFStringEncoding.c
	* Source/CFURLAccess.c
	* Source/config.h.in,
	* configure,
	* configure: Fixed support for building on Windows.
	CFRunLoop and directory enumeration in CFURLAccess is currently not
	implemented on Windows, and Windows-specific implementations of
	CFSocket, CFStream, and CFURLAccess are largely untested so far.

2021-03-19  Frederik Seiffert <frederik@algoriddim.com>
	* Source/CFRunLoop.c,
	* Source/GSPrivate.h,
	* Source/config.h.in,
	* configure,
	* configure: Add support for building without pthread library.

2022-09-12  Stefan Bidigaray <stefanbidi@gmail.com>
	* configure.ac,
	* configure,
	* Source/GNUmakefile: Add ICU_CFLAGS and ICU_LIBS to CFLAGS and LIBS,
	respectively. Fixes issue GH-19 and GH-21.

2020-03-12  Frederik Seiffert <frederik@algoriddim.com>
	* Source/CFNumber: Add equality and hash functions.

2020-03-10  Frederik Seiffert <frederik@algoriddim.com>
	* Source/GSHashTable.c: Fix second hash function for double hashing
	collision case to avoid possible infinite loop.

2020-03-06  Frederik Seiffert <frederik@algoriddim.com>
	* Source/GNUmakefile.in,
	* Source/NSCFNumber.m,
	* Source/NSCFType.m: Implement toll-free bridging of CFNumber
	to NSNumber.
	* Tests/CFNumber/bridge.m: Add CFNumber bridging tests.

2019-11-15  Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/CFNumber.c: Implement toll-free bridging in
	CFNumberGetValue().

2019-11-09  Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/CFNumber.c: Implement partial toll-free bridging.

2019-11-09  Stefan Bidigaray <stefanbidi@gmail.com>
	* aclocal.m4,
	* configure,
	* configure.ac: Update configure to use pkg-config instead of
	icu-config.
